rewrite auth routes
