# backend/src/controllers/authController.js
@@ -8,8 +8,8 @@ dotenv.config();
 
 const saltRounds = Number(process.env.SALT_ROUNDS);
 
-// ROUTE 1: Create a user using: POST 'api/auth/mentor/signup". No login required
-export const mentorSignup = async (req, res) => {
+// ROUTE 1: Create a user using: POST 'api/auth/signup". No login required
+export const signup = async (req, res) => {
 
     let success = false;
 
@@ -21,10 +21,6 @@ export const mentorSignup = async (req, res) => {
     try {
 
         const {email, username, password, role, name} = req.body;
-
-        if (role != "mentor") {
-            return res.status(400).json({success, error: "Sign up as a mentor"});
-        }
 
         let user = await fetchUserByEmail(email);
         if (user) {
@@ -51,7 +47,7 @@ export const mentorSignup = async (req, res) => {
             },
         });
 
-        const authtoken = signToken(user._id, user.role);
+        const authtoken = signToken(user._id, user.role, user.username);
 
         success = true;
         res.status(201).json({success, authtoken});
@@ -65,8 +61,8 @@ export const mentorSignup = async (req, res) => {
 
 }
 
-// ROUTE 2: Authenticate a user using: POST 'api/auth/mentor/login". No login required
-export const mentorLogin = async (req, res) => {
+// ROUTE 2: Authenticate a user using: POST 'api/auth/login". No login required
+export const login = async (req, res) => {
 
     let success = false;
 
@@ -77,11 +73,7 @@ export const mentorLogin = async (req, res) => {
 
     try {
 
-        const {email, password, role} = req.body;
-
-        if (role != "mentor") {
-            return res.status(400).json({success, error: "Login as a mentor"});
-        }
+        const {email, password} = req.body;
 
         // Finding if user exists
         let user = await fetchUserByEmail(email);
@@ -95,7 +87,7 @@ export const mentorLogin = async (req, res) => {
             return res.status(400).json({success, error: "Incorrect credentials"});
         }
 
-        const authtoken = signToken(user._id, user.role);
+        const authtoken = signToken(user._id, user.role, user.username);
 
         success = true;
         res.status(200).json({success, authtoken});
@@ -109,108 +101,7 @@ export const mentorLogin = async (req, res) => {
 
 }
 
-// ROUTE 3: Create a user using: POST 'api/auth/mentee/signup". No login required
-export const menteeSignup = async (req, res) => {
-
-    let success = false;
-
-    const errors = validationResult(req);
-    if (!errors.isEmpty()) {
-        return res.status(400).json({ errors: errors.array() });
-    }
-
-    try {
-
-        const {email, username, password, role, name} = req.body;
-
-        if (role != "mentee") {
-            return res.status(400).json({success, error: "Sign up as a mentee"});
-        }
-
-        let user = await fetchUserByEmail(email);
-        if (user) {
-            return res.status(400).json({success, error: "Email already exists"});
-        }
-
-        user = await fetchUserByUsername(username);
-        if (user) {
-            return res.status(400).json({success, error: "Username already exists"});
-        }
-
-        // Salting password
-        const salt = await bcrypt.genSalt(saltRounds);
-        const secPass = await bcrypt.hash(password, salt);
-
-        // Creating a new user
-        user = await createUser({
-            username: username,
-            password: secPass,
-            email: email,
-            role: role,
-            profile: {
-                name: name,
-            },
-        });
-
-        const authtoken = signToken(user._id, user.role);
-
-        success = true;
-        res.status(201).json({success, authtoken});
-
-    } catch (error) {
-
-        console.log(error.message);
-        res.status(500).send("Internal server error");
-
-    }
-
-}
-
-// ROUTE 4: Authenticate a user using: POST 'api/auth/mentor/login". No login required
-export const menteeLogin = async (req, res) => {
-
-    let success = false;
-
-    const errors = validationResult(req);
-    if (!errors.isEmpty()) {
-        return res.status(400).json({ errors: errors.array() });
-    }
-
-    try {
-
-        const {email, password, role} = req.body;
-
-        if (role != "mentee") {
-            return res.status(400).json({success, error: "Login as a mentee"});
-        }
-
-        // Finding if user exists
-        let user = await fetchUserByEmail(email);
-        if (!user) {
-            return res.status(400).json({success, error: "User not found"});
-        }
-
-        // Matching user password
-        const passwordCompare = await bcrypt.compare(password, user.password);
-        if (!passwordCompare) {
-            return res.status(400).json({success, error: "Incorrect credentials"});
-        }
-
-        const authtoken = signToken(user._id, user.role);
-
-        success = true;
-        res.status(200).json({success, authtoken});
-
-    } catch (error) {
-
-        console.log(error.message);
-        res.status(500).send("Internal server error");
-
-    }
-
-}
-
-// ROUTE 4: Authenticate a user using: POST 'api/auth/admin/login". No login required
+// ROUTE 3: Authenticate a user using: POST 'api/auth/admin/login". No login required
 export const adminLogin = async (req, res) => {
 
     let success = false;
@@ -225,7 +116,7 @@ export const adminLogin = async (req, res) => {
         const {email, password, role} = req.body;
 
         if (role != "admin") {
-            return res.status(400).json({success, error: "Login as a admin"});
+            return res.status(400).json({success, error: "Unauthorized"});
         }
 
         // Finding if user exists
